--- a/.github/workflows/Build_ARMv8.yml
+++ b/.github/workflows/Build_ARMv8.yml
@@ -61,7 +61,7 @@ jobs:
         
     - name: Compare Commit Hash
       id: cacheHash
-      uses: actions/cache@v2
+      uses: actions/cache@main
       with:
         path: .commitHash_arm
         key: HEAD-${{ steps.getHash.outputs.commitHash_arm }}
