--- a/armv8/armv8.config
+++ b/armv8/armv8.config
@@ -1646,6 +1646,7 @@ CONFIG_HTOP_LMSENSORS=y
 # CONFIG_PACKAGE_muninlite is not set
 # CONFIG_PACKAGE_netatop is not set
 CONFIG_PACKAGE_netdata=y
+# CONFIG_PACKAGE_nload is not set
 # CONFIG_PACKAGE_nyx is not set
 # CONFIG_PACKAGE_schroot is not set
 
@@ -3056,6 +3057,12 @@ CONFIG_NODEJS_ICU_NONE=y
 # end of Node.js
 
 #
+# PHP7
+#
+# CONFIG_PACKAGE_php7 is not set
+# end of PHP7
+
+#
 # PHP8
 #
 CONFIG_PACKAGE_php8=y
@@ -3117,6 +3124,7 @@ CONFIG_PACKAGE_php8-mod-zip=y
 # CONFIG_PACKAGE_php8-pecl-raphf is not set
 # CONFIG_PACKAGE_php8-pecl-redis is not set
 # CONFIG_PACKAGE_php8-pecl-sodium is not set
+# CONFIG_PACKAGE_php8-pecl-swoole is not set
 # end of PHP8
 
 #
@@ -4482,7 +4490,7 @@ CONFIG_PACKAGE_libcharset=y
 CONFIG_PACKAGE_libcomerr=y
 CONFIG_PACKAGE_libconfig=y
 # CONFIG_PACKAGE_libcronet is not set
-CONFIG_PACKAGE_libcryptopp=y
+# CONFIG_PACKAGE_libcryptopp is not set
 # CONFIG_PACKAGE_libctf is not set
 CONFIG_PACKAGE_libcurl=y
 
@@ -5057,7 +5065,7 @@ CONFIG_PACKAGE_luci-app-p910nd=y
 CONFIG_PACKAGE_luci-app-passwall=y
 
 #
-# PassWall Configuration
+# Configuration
 #
 CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
 # CONFIG_PACKAGE_luci-app-passwall_Nftables_Transparent_Proxy is not set
@@ -5079,7 +5087,7 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin is not set
-# end of PassWall Configuration
+# end of Configuration
 
 CONFIG_PACKAGE_luci-app-passwall2=y
 
@@ -6591,15 +6599,16 @@ CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
 #
 # Customizing build tags
 #
-# CONFIG_TAG_sing-box_ACME is not set
-CONFIG_TAG_sing-box_CLASH_API=y
-# CONFIG_TAG_sing-box_ECH is not set
-CONFIG_TAG_sing-box_GRPC=y
-# CONFIG_TAG_sing-box_GVISOR is not set
-CONFIG_TAG_sing-box_QUIC=y
-# CONFIG_TAG_sing-box_SHADOWSOCKSR is not set
-CONFIG_TAG_sing-box_UTLS=y
-CONFIG_TAG_sing-box_WIREGUARD=y
+# CONFIG_SING_BOX_BUILD_ACME is not set
+CONFIG_SING_BOX_BUILD_CLASH_API=y
+# CONFIG_SING_BOX_BUILD_ECH is not set
+# CONFIG_SING_BOX_BUILD_GRPC is not set
+# CONFIG_SING_BOX_BUILD_GVISOR is not set
+CONFIG_SING_BOX_BUILD_QUIC=y
+# CONFIG_SING_BOX_BUILD_SHADOWSOCKSR is not set
+CONFIG_SING_BOX_BUILD_UTLS=y
+# CONFIG_SING_BOX_BUILD_V2RAY_API is not set
+CONFIG_SING_BOX_BUILD_WIREGUARD=y
 # end of Customizing build tags
 
 # CONFIG_PACKAGE_sockd is not set
