--- a/x86/x86.config
+++ b/x86/x86.config
@@ -1741,6 +1741,7 @@ CONFIG_HTOP_LMSENSORS=y
 # CONFIG_PACKAGE_muninlite is not set
 # CONFIG_PACKAGE_netatop is not set
 CONFIG_PACKAGE_netdata=y
+# CONFIG_PACKAGE_nload is not set
 # CONFIG_PACKAGE_nyx is not set
 # CONFIG_PACKAGE_schroot is not set
 
@@ -3125,6 +3126,12 @@ CONFIG_NODEJS_ICU_NONE=y
 # CONFIG_PACKAGE_node-serialport is not set
 # CONFIG_PACKAGE_node-serialport-bindings is not set
 # end of Node.js
+
+#
+# PHP7
+#
+# CONFIG_PACKAGE_php7 is not set
+# end of PHP7
 
 #
 # PHP8
@@ -4864,7 +4871,7 @@ CONFIG_PACKAGE_luci-app-p910nd=y
 CONFIG_PACKAGE_luci-app-passwall=y
 
 #
-# PassWall Configuration
+# Configuration
 #
 CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
 # CONFIG_PACKAGE_luci-app-passwall_Nftables_Transparent_Proxy is not set
@@ -4886,14 +4893,13 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin is not set
-# end of PassWall Configuration
+# end of Configuration
 
 # CONFIG_PACKAGE_luci-app-passwall2 is not set
 
 #
 # Configuration
 #
-# CONFIG_PACKAGE_luci-app-passwall2_Transparent_Proxy is not set
 # CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Brook is not set
 # CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Hysteria is not set
 # CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_IPv6_Nat is not set
@@ -6278,15 +6284,16 @@ CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
 #
 # Customizing build tags
 #
-# CONFIG_TAG_sing-box_ACME is not set
-CONFIG_TAG_sing-box_CLASH_API=y
-# CONFIG_TAG_sing-box_ECH is not set
-CONFIG_TAG_sing-box_GRPC=y
-# CONFIG_TAG_sing-box_GVISOR is not set
-CONFIG_TAG_sing-box_QUIC=y
-# CONFIG_TAG_sing-box_SHADOWSOCKSR is not set
-CONFIG_TAG_sing-box_UTLS=y
-CONFIG_TAG_sing-box_WIREGUARD=y
+# CONFIG_SING_BOX_BUILD_ACME is not set
+CONFIG_SING_BOX_BUILD_CLASH_API=y
+# CONFIG_SING_BOX_BUILD_ECH is not set
+# CONFIG_SING_BOX_BUILD_GRPC is not set
+# CONFIG_SING_BOX_BUILD_GVISOR is not set
+CONFIG_SING_BOX_BUILD_QUIC=y
+# CONFIG_SING_BOX_BUILD_SHADOWSOCKSR is not set
+CONFIG_SING_BOX_BUILD_UTLS=y
+# CONFIG_SING_BOX_BUILD_V2RAY_API is not set
+CONFIG_SING_BOX_BUILD_WIREGUARD=y
 # end of Customizing build tags
 
 # CONFIG_PACKAGE_sockd is not set
