--- a/.github/workflows/Multiple Source Check.yml
+++ b/.github/workflows/Multiple Source Check.yml
@@ -27,7 +27,8 @@ jobs:
       run: |
         git clone --depth 1 $REPO_URL_Lede -b $REPO_BRANCH_Lede $REPO_PATH_Lede
         cd $REPO_PATH_Lede
-        echo "::set-output name=commitHash_Lede::$(git rev-parse HEAD)"
+        #echo "::set-output name=commitHash_Lede::$(git rev-parse HEAD)"
+        echo "commitHash_Lede=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
         cd      
     - name: Show Commit Head and Combination Heads
       id: combHeader
@@ -67,7 +68,8 @@ jobs:
       run: |
         git clone --depth 1 $REPO_URL_HelloWorld -b $REPO_BRANCH_HelloWorld $REPO_PATH_HelloWorld 
         cd $REPO_PATH_HelloWorld
-        echo "::set-output name=commitHash_HelloWorld::$(git rev-parse HEAD)"
+        #echo "::set-output name=commitHash_HelloWorld::$(git rev-parse HEAD)"
+        echo "commitHash_HelloWorld=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
         cd    
     - name: Show Commit Head and Combination Heads
       id: combHeader
@@ -107,7 +109,8 @@ jobs:
       run: |
         git clone --depth 1 $REPO_URL_OpenClash -b $REPO_BRANCH_OpenClash $REPO_PATH_OpenClash
         cd $REPO_PATH_OpenClash
-        echo "::set-output name=commitHash_OpenClash::$(git rev-parse HEAD)"
+        #echo "::set-output name=commitHash_OpenClash::$(git rev-parse HEAD)"
+        echo "commitHash_OpenClash=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
         cd  
     - name: Show Commit Head and Combination Heads
       id: combHeader
