--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -75,7 +75,8 @@ jobs:
       run: |
         git clone --depth 1 $REPO_URL_Lede -b $REPO_BRANCH_Lede $REPO_PATH_Lede
         cd $REPO_PATH_Lede
-        echo "::set-output name=commitHash_x86::$(git rev-parse HEAD)"
+        #echo "::set-output name=commitHash_x86::$(git rev-parse HEAD)"
+        echo "commitHash_x86=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
         cd 
         
     - name: Show Commit Head and Combination Heads
@@ -94,7 +95,8 @@ jobs:
       id: outputunifreq
       if: steps.cacheHash.outputs.cache-hit == 'true'
       run: |
-        echo "::set-output name=unifreq::hello"
+        #echo "::set-output name=unifreq::hello"
+        echo "unifreq=hello" >> $GITHUB_OUTPUT
         
     - name: Save New Commit Hash
       if: steps.cacheHash.outputs.cache-hit != 'true'
