--- a/.github/workflows/Build_ARMv8.yml
+++ b/.github/workflows/Build_ARMv8.yml
@@ -367,13 +367,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:  
     - name: Delete workflow runs
-      uses: GitRML/delete-workflow-runs@main
+      uses: Jejz168/delete-workflow-runs@main
       with:
         retain_days: 8
         keep_minimum_runs: 2
         
     - name: Remove old Releases
-      uses: dev-drprasad/delete-older-releases@v0.2.0
+      uses: Jejz168/delete-older-releases@master
       if: env.UPLOAD_RELEASE == 'true' 
       with:
         keep_latest: 10
