--- a/armv8/armv8.config
+++ b/armv8/armv8.config
@@ -4490,7 +4490,7 @@ CONFIG_PACKAGE_libcharset=y
 CONFIG_PACKAGE_libcomerr=y
 CONFIG_PACKAGE_libconfig=y
 # CONFIG_PACKAGE_libcronet is not set
-CONFIG_PACKAGE_libcryptopp=y
+# CONFIG_PACKAGE_libcryptopp is not set
 # CONFIG_PACKAGE_libctf is not set
 CONFIG_PACKAGE_libcurl=y
 
